
  [ Andreas Warnke ]
  * mouse cursor indicates options for creating objects with nicer icons
  * the plain txt export performs linebreaks at 80 chars
  * it omits empty descriptions
  * the plain txt export uses markdown headings, code, lists
  * the json storage and export adds linebreaks at 80 chars of contents
  * exported json schema shows enum values of display_tags and element types

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sun, 08 Jun 2025 10:30:00 +0100

crystal-facet-uml (1.63.3) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * Improved navigation in html export
  * All linebreaks are transformed to html and doxygen exports
  * removed limitation on maximum 10 appearance-links in html export

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sun, 04 May 2025 10:30:00 +0100

crystal-facet-uml (1.63.2) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * relationships to contained elements start from inner border, not outside
  * too short relationships are weighted by additional dept
    layout_good_cases        ERR=0,  W/C=8,    W/F=1,   W/L=25,   W/R=61
    layout_challenging_cases ERR=39, W/C=9751, W/F=503, W/L=6720, W/R=7636
  * exported cross-references D0001#id work even if many characters follow

 -- Andreas Warnke <cfu@andreaswarnke.de>  Thu, 01 May 2025 11:00:00 +0100

crystal-facet-uml (1.63.1) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * in sequence charts, labels of relationships are closer to the x-center
  * relationships may trespass parents/ancestors of their from/to nodes

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sat, 22 Mar 2025 08:00:00 +0100

crystal-facet-uml (1.63.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * scripts added to build for Windows(TM) using msys2
  * no fancy names for new objects, only New Diagram, New Element, New Feature
  * snapping distance increased for snapping classifiers to grid
  * layouting of relationship labels consider the surrouding space