@@ -186,7 +186,7 @@ static inline void data_classifier_trace ( const data_classifier_t *this_ )
     U8_TRACE_INFO_STR( "- description:", utf8stringbuf_get_string( &((*this_).description)) );
     U8_TRACE_INFO_INT( "- x_order:", (*this_).x_order );
     U8_TRACE_INFO_INT( "- y_order:", (*this_).y_order );
-    U8_TRACE_INFO_INT( "- list_order:", (*this_).list_order );s
+    U8_TRACE_INFO_INT( "- list_order:", (*this_).list_order );
     U8_TRACE_INFO_STR( "- uuid:", data_uuid_get_string( &((*this_).uuid) ) );
 }
 
