@@ -7,6 +7,7 @@ crystal-facet-uml (1.64.0) UNRELEASED; urgency=medium
   * the plain txt export uses markdown headings, code, lists
   * the json storage and export adds linebreaks at 80 chars of contents
   * exported json schema shows enum values of display_tags and element types
+  * exported json and html show simplified element type names
 
  -- Andreas Warnke <cfu@andreaswarnke.de>  Sun, 08 Jun 2025 10:30:00 +0100
 
